# sdl2imgshow

./: .gitignore  CMakeLists.txt  README.md  example.ini  gameselect.ini  gametemplate.ini
src/: sdl2imgshow.c  sdl2imgshow.h  util.c
